<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reasult"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tw.com.a4040e009.a161018_homework3_1.ReasultActivity">

    <TextView
        android:text="@string/tvstudentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvname"
        android:layout_marginTop="19dp"
        android:id="@+id/tvstudentID"
        android:textSize="24sp"
        android:layout_alignStart="@+id/tvname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etname"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/etstudentID"
        android:hint="@string/etname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etstudentID"
        android:layout_below="@+id/etname"
        android:layout_marginTop="13dp"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tvstudentID"
        android:hint="@string/etstudentID" />

    <TextView
        android:text="@string/tvname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvname"
        android:textSize="24sp"
        android:layout_alignBottom="@+id/etname"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btback1" />

    <Button
        android:text="@string/btback1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btback1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickback1"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/image"
        android:id="@+id/imageView"
        android:layout_above="@+id/btback1"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etstudentID" />

</RelativeLayout>
